Make C-c in ble.sh just discard the line

--- a/.blerc
+++ b/.blerc
@@ -5,6 +5,9 @@ function blerc/vim-load-hook {
 }
 blehook/eval-after-load keymap_vi blerc/vim-load-hook
 
+ble-bind -m vi_imap -f 'C-c' discard-line
+ble-bind -m vi_nmap -f 'C-c' discard-line
+
 ble-import -d integration/fzf-completion
 #ble-import -d integration/fzf-key-bindings
 #_ble_contrib_fzf_git_config=key-binding:sabbrev:arpeggio
